@@ -9,7 +9,7 @@ except ImportError:
 from Products.LinguaPlone.I18NBaseObject import I18NBaseObject
 
 
-class I18NBaseBTreeFolder(I18NBaseObject, BaseBTreeFolder):
+class I18NOnlyBaseBTreeFolder(I18NBaseObject):
     """Base class for translatable objects."""
 
     security = ClassSecurityInfo()
@@ -19,6 +19,17 @@ class I18NBaseBTreeFolder(I18NBaseObject, BaseBTreeFolder):
 
     def manage_beforeDelete(self, item, container):
         I18NBaseObject.manage_beforeDelete(self, item, container)
+
+InitializeClass(I18NOnlyBaseBTreeFolder)
+
+
+class I18NBaseBTreeFolder(I18NOnlyBaseBTreeFolder, BaseBTreeFolder):
+    """Base class for translatable objects."""
+
+    security = ClassSecurityInfo()
+
+    def manage_beforeDelete(self, item, container):
+        I18NOnlyBaseBTreeFolder.manage_beforeDelete(self, item, container)
         BaseBTreeFolder.manage_beforeDelete(self, item, container)
 
 InitializeClass(I18NBaseBTreeFolder)
